DASH: fix vertical alignment of ON/OFF slider (w/ bootstrap)

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -159,6 +159,8 @@ div.error {
   width: 8em;
   padding: 0.125em;
   border: solid 2px #5E5E5E;
+  vertical-align: middle;
+  margin-bottom: 0;
 }
 .toggle input {
   position: absolute;
